--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.975.0",
     "@fastify/compress": "^7.0.0",
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
@@ -43,8 +44,8 @@
     "mssql": "^10.0.2",
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-microsoft": "^1.0.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
